# CAP

./: .gitignore  README.adoc  pyproject.toml  secrets.json  settings.json
docs/Google_API/: README.adoc
docs/Query_Info/: README.adoc
src/: Main.py
src/business/: HandleDetailedInfoFromVideos.py  ValidateLegitimatePodcast.py  YouTubeInformation.py  YouTubeVideoStates.py
src/constants/: Constants.py  ConstantsPaths.py  ConstantsUpdater.py  ConstantsValidator.py
src/ftp_uploader/: FTPUploader.py  FilenameGenerator.py
src/logs/: Logging.py
src/mp3download/: MP3Downloader.py
src/queries/: AccessToken.py  AccessTokenUpdater.py  CheckYouTubeVideoInspector.py  HttpRequestExecutor.py  MostRecentYouTubeVideos.py
src/utils/: FilenameSanitizer.py  PersistVideoInformation.py  TimeHandler.py
watchdog/: Const.py  Constants.py  ConstantsPaths.py  ConstantsUpdater.py  Main.py  TimeHandler.py
watchdog/business/: ValidateLegitimatePodcast.py  YouTubeInformation.py  YouTubeVideoStates.py
watchdog/constants/: Constants.py  ConstantsPaths.py  ConstantsUpdater.py  ConstantsValidator.py
watchdog/logs/: Logging.py
watchdog/queries/: AccessToken.py  AccessTokenUpdater.py  CheckYouTubeVideoInspector.py  HttpRequestExecutor.py  MakeQuery.py  MostRecentYouTubeVideos.py  UpdateAccessToken.py
watchdog/utils/: PersistVideoInformation.py
web/: index.html  mystyles.css  server.py
web/bootstrap/: README.adoc
web/js/: log_manipulation.js
web/scripts/: launch_cap.sh  launch_cap_wrapper.php
